removed overflow hidden from header to fix burger menu

--- a/css/new-portfolio.css
+++ b/css/new-portfolio.css
@@ -464,7 +464,6 @@ h1 {
   .header-container {
     width: 100%;
     height: 80px;
-    overflow: hidden;
     position: fixed;
   }
 
